Update 01. 비전공자도 인공지능을 배울 수 있나요.md

--- a/딥러닝 레벨원을 위한 오리엔테이션/01. 비전공자도 인공지능을 배울 수 있나요.md
+++ b/딥러닝 레벨원을 위한 오리엔테이션/01. 비전공자도 인공지능을 배울 수 있나요.md
@@ -12,7 +12,7 @@
 
 ##### 🛠 딥러닝 공부 테크트리 
 
-![image-20221229221049828](../imges/01. 비전공자도 인공지능을 배울 수 있나요/image-20221229221049828.png)
+![image](https://user-images.githubusercontent.com/99783474/213921087-79db76e3-0a6f-4ce4-8e57-9ebf611fe355.png)
 
 
 
@@ -20,13 +20,13 @@
 
 > 프로그래밍, 뇌과학, 인공지능 개론, 딥러닝, 패턴인식, 자연어처리, 컴퓨터 비전 
 
-![image-20221229221435430](../imges/01. 비전공자도 인공지능을 배울 수 있나요/image-20221229221435430.png)
+![image](https://user-images.githubusercontent.com/99783474/213921102-07067bc9-5a36-431b-8ae0-3f2f4f632c27.png)
 
 
 
 ##### 🛠 사용할 프레임 워크 : TensorFlow
 
-![image-20221229221707918](../imges/01. 비전공자도 인공지능을 배울 수 있나요/image-20221229221707918.png)
+![image](https://user-images.githubusercontent.com/99783474/213921110-18f21305-69b8-4eca-acaa-1b9188fce1a3.png)
 
 
 
